# Segmentation_OPENCV

./: CMakeLists.txt  README.md  Segmentacion_regiones.cxx  segmentacion.cxx
